fix image UI flicker using magic

--- a/src/HomePage/styles.module.scss
+++ b/src/HomePage/styles.module.scss
@@ -1,9 +1,5 @@
 @import "styles/common";
 
-.delayed {
-  transition-delay: 0.75s;
-}
-
 .outer-container {
   color: $grey-800;
 
@@ -39,16 +35,26 @@
   }
 
   .resume-col {
+    margin: 0 auto;
+    max-width: 870px;
     padding: 0 35px;
 
+    // http://davidecalignano.it/lazy-loading-with-responsive-images-and-unknown-height/
     .resume-card {
+      display: block;
+      height: 0;
       margin: 0 auto;
+      padding-top: 68.37346665188336%;
+      position: relative;
       text-align: center;
-      width: fit-content;
+      width: 100%;
 
       .resume {
-        height: auto;
-        max-width: 100%;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
       }
     }
   }
